feat: scenarioListPage init
